# zkHackVoting

./: README.md  package-lock.json  package.json  tailwind.config.js  truffle-config.js
.next/: trace
.next/cache/webpack/client-development/: 1.pack  2.pack  3.pack  5.pack  7.pack  index.pack  index.pack.old
.next/cache/webpack/server-development/: 0.pack  1.pack  2.pack  3.pack  4.pack  5.pack  index.pack  index.pack.old
.next/server/pages/: _app.js  _document.js  _error.js  index.js
.next/static/chunks/: main.js  webpack.js
.next/static/chunks/pages/: _app.js  index.js
.next/static/webpack/: webpack.17f33bc17a97425b.hot-update.js  webpack.22763d1d944c6eef.hot-update.js  webpack.36d8ad026778fb72.hot-update.js  webpack.583675d89bd2163b.hot-update.js  webpack.58bf6089e7ea0ce6.hot-update.js  webpack.61987c120950e654.hot-update.js  webpack.6407b5c2a843c6a5.hot-update.js  webpack.9d919efeea9c8eaa.hot-update.js  webpack.b78a6f80447c1582.hot-update.js  webpack.b8d6de28cf547dfe.hot-update.js  webpack.df8e3b80f2cbcc20.hot-update.js  webpack.e049f242b81868e3.hot-update.js  webpack.edefbd8855e3328f.hot-update.js
.next/static/webpack/pages/: index.17f33bc17a97425b.hot-update.js  (+11 more)
contracts/: Election.sol
migrations/: 1_deploy_contracts.js
pages/: index.js  results.js  testing.js
server/: Cargo.toml
server/src/: main copy 3.rs  main copy.rs  main.rs  voting.masm
testing/: StressTest.py
testing/Execute/: Cargo.toml
testing/Execute/src/: main.rs
testing/Proof/: Cargo.toml
testing/mount/: Cargo.toml
testing/mount/src/: main.rs
