[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miden-assembly = "0.7.0"
miden-processor = "0.7.0"
miden-prover = "0.7.0"
miden-stdlib = "0.6.0"
miden-verifier = "0.7.0"
miden-vm = "0.7.0"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
